--- a/NEWS
+++ b/NEWS
@@ -91,7 +91,10 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
     gal_pdf_suffix_is_pdf: Returns 1 if given suffix is PDF.
     gal_pdf_write: Writes a dataset into an PDF file.
     gal_pointer_allocate_mmap: Allocate space in a file, not in RAM.
-    gal_qsort_index_float_increasing: Sort indexs in increasing value order.
+    gal_qsort_index_single_d: Sort indexs of single array in decreasing order.
+    gal_qsort_index_single_i: Sort indexs of single array in decreasing order.
+    gal_qsort_index_multi_d: Sort indexs in multiple arrays (on different threads).
+    gal_qsort_index_multi_i: Sort indexs in multiple arrays (on different threads).
     gal_tiff_name_is_tiff: check if name contains a TIFF suffix.
     gal_tiff_suffix_is_tiff: check if suffix is a TIFF suffix.
     gal_tiff_dir_string_read: convert a string to a TIFF directory number.
@@ -168,6 +171,8 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
     gal_pointer_allocate: replaces `gal_data_malloc_array' and
         `gal_data_calloc_array', through an argument you can ask for the
         allocated memory to be cleared or not.
+    gal_qsort_TYPE_i: new name for gal_qsort_TYPE_increasing.
+    gal_qsort_TYPE_d: new name for gal_qsort_TYPE_decreasing.
     gal_statistics_is_sorted: can now also update the bit-flags regarding
         the sorted nature of the input (to optimize future calls to the
         function).
