--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -24353,8 +24353,8 @@ the main parameters of this two-layer tessellation and help in benefiting
 from it.
 
 @deftp {Type (C @code{struct})} gal_tile_two_layer_params
-This is the general structure to keep all the necessary parameters for a
-two-layer tessellation.
+The general structure to keep all the necessary parameters for a two-layer
+tessellation.
 
 @example
 struct gal_tile_two_layer_params
@@ -24743,22 +24743,65 @@ both polygons have to be sorted in an anti-clock-wise manner.
 @node Qsort functions, Permutations, Polygons, Gnuastro library
 @subsection Qsort functions (@file{qsort.h})
 
-The C programming language comes with the @code{qsort} (Quick sort)
-function. @code{qsort} is a generic function which allows you to sort any
-kind of data structure (not just a single number). To define greater and
-smaller (for sorting), @code{qsort} needs another function, even for simple
-numerical types. To facilitate numerical sorting for Gnuastro's
-programs/libraries, Gnuastro defines a function for each type's increasing
-and decreasing function. You can pass these functions to @code{qsort} when
-your array has the respective type (see @ref{Numeric data types}).
+When sorting a dataset is necessary, the C programming language provides
+the @code{qsort} (Quick sort) function. @code{qsort} is a generic function
+which allows you to sort any kind of data structure (not just a single
+array of numbers). To define ``greater'' and ``smaller'' (for sorting),
+@code{qsort} needs another function, even for simple numerical types. The
+functions introduced in this section are to passed onto @code{qsort}.
 
-@deffn {Global variable} {gal_qsort_index_arr}
+The first class of functions below (with @code{TYPE} in their names) can be
+used for sorting a simple numeric array. Just replace @code{TYPE} with the
+dataset's numeric datatype. The second set of functions can be used to sort
+indexs (leave the actual numbers untouched). To use the second set of
+functions, a global variable or structure are also necessary as described
+below.
+
+@deffn {Global variable} {gal_qsort_index_single}
+@cindex Thread-safety
+@cindex Multi-threaded operation
 Pointer to a floating point array (@code{float *}) to use as a reference in
-@code{gal_qsort_index_float_decreasing}, see the explanation there for
-more.
+@code{gal_qsort_index_single_d} or @code{gal_qsort_index_single_i}, see the
+explanation of these functions for more. Note that if more than one array
+is to be sorted in a multi-threaded operation, the two functions will not
+work as expected. Therefore, if the operation is multi-threaded, but all
+the threads just sort the indexs based on a single array, this global
+variable can safely be used.
 @end deffn
 
-@deftypefun int gal_qsort_index_float_decreasing (const void @code{*a}, const void @code{*b})
+@deftp {Type (C @code{struct})} gal_qsort_index_multi
+Structure to get the sorted indexs of multiple datasets on multiple threads
+with @code{gal_qsort_index_multi_d} or @code{gal_qsort_index_multi_i}. Note
+that the @code{values} array will not be changed by these functions, it is
+only read. Therefore all the @code{values} elements in the (to be sorted)
+array of @code{gal_qsort_index_multi} must point to the same place.
+
+@example
+struct gal_qsort_index_multi
+@{
+  float *values;         /* Array of values (same in all).      */
+  size_t  index;         /* Index of each element to be sorted. */
+@};
+@end example
+@end deftp
+
+@deftypefun int gal_qsort_TYPE_d (const void @code{*a}, const void @code{*b})
+When passed to @code{qsort}, this function will sort a @code{TYPE} array in
+decreasing order (first element will be the largest). Please replace
+@code{TYPE} (in the function name) with one of the @ref{Numeric data
+types}, for example @code{gal_qsort_int32_d}, or
+@code{gal_qsort_float64_d}.
+@end deftypefun
+
+@deftypefun int gal_qsort_TYPE_i (const void @code{*a}, const void @code{*b})
+When passed to @code{qsort}, this function will sort a @code{TYPE} array in
+increasing order (first element will be the smallest). Please replace
+@code{TYPE} (in the function name) with one of the @ref{Numeric data
+types}, for example @code{gal_qsort_int32_i}, or
+@code{gal_qsort_float64_i}.
+@end deftypefun
+
+@deftypefun int gal_qsort_index_single_d (const void @code{*a}, const void @code{*b})
 When passed to @code{qsort}, this function will sort a @code{size_t} array
 based on decreasing values in the @code{gal_qsort_index_arr} single
 precision floating point array. The floating point array will not be
@@ -24776,7 +24819,7 @@ main (void)
   size_t s[4]=@{0, 1, 2, 3@};
   float f[4]=@{1.3,0.2,1.8,0.1@};
   gal_qsort_index_arr=f;
-  qsort(s, 4, sizeof(size_t), gal_qsort_index_float_decreasing);
+  qsort(s, 4, sizeof(size_t), gal_qsort_index_single_d);
   printf("%zu, %zu, %zu, %zu\n", s[0], s[1], s[2], s[3]);
   return EXIT_SUCCESS;
 @}
@@ -24786,27 +24829,28 @@ main (void)
 The output will be: @code{2, 0, 1, 3}.
 @end deftypefun
 
-@deftypefun int gal_qsort_index_float_increasing (const void @code{*a}, const void @code{*b})
-Similar to @code{gal_qsort_index_float_decreasing}, but will sort the
-indexes such that the values of @code{gal_qsort_index_arr} are in
-increasing order.
+@deftypefun int gal_qsort_index_single_i (const void @code{*a}, const void @code{*b})
+Similar to @code{gal_qsort_index_single_d}, but will sort the indexes such
+that the values of @code{gal_qsort_index_arr} are in increasing order.
 @end deftypefun
 
+@deftypefun int gal_qsort_index_multi_d (const void @code{*a}, const void @code{*b})
+When passed to @code{qsort} with an array of @code{gal_qsort_index_multi},
+this function will sort the array based on the values of the given
+indexs. The sorting will be ordered according to the @code{values} pointer
+of @code{gal_qsort_index_multi}. Note that @code{values} must point to the
+same place in all the structures of the @code{gal_qsort_index_multi} array.
 
-@deftypefun int gal_qsort_TYPE_increasing (const void @code{*a}, const void @code{*b})
-When passed to @code{qsort}, this function will sort an @code{TYPE} array
-in increasing order (first element will be the smallest). Please replace
-@code{TYPE} (in the function name) with one of the @ref{Numeric data
-types}, for example @code{gal_qsort_int32_increasing}, or
-@code{gal_qsort_float64_increasing}.
+This function is only useful when the the indexs of multiple arrays on
+multiple threads are to be sorted. If your program is single threaded, or
+all the indexs belong to a single array (sorting different sub-sets of
+indexs in a single array on multiple threads), it is recommended to use
+@code{gal_qsort_index_single_d}.
 @end deftypefun
 
-@deftypefun int gal_qsort_TYPE_decreasing (const void @code{*a}, const void @code{*b})
-When passed to @code{qsort}, this function will sort an @code{TYPE} array
-in decreasing order (first element will be the largest). Please replace
-@code{TYPE} (in the function name) with one of the @ref{Numeric data
-types}, for example @code{gal_qsort_int32_decreasing}, or
-@code{gal_qsort_float64_decreasing}.
+@deftypefun int gal_qsort_index_multi_i (const void @code{*a}, const void *@code{b})
+Similar to @code{gal_qsort_index_multi_d}, but the result will be sorted in
+increasing order (first element will have the smallest value).
 @end deftypefun
 
 
@@ -25573,13 +25617,26 @@ The @code{values} dataset must have a 32-bit floating point type
 read by this function. @code{indexs} must contain the indexs of the
 elements/pixels that will be over-segmented by this function and have a
 @code{GAL_TYPE_SIZE_T} type, see the description of
-@code{gal_label_indexs}, above. After this function, @code{indexs} will be
-sorted by the values of the respective pixel in @code{values}. The final
-labels will be written in the respective positions of @code{labels}, which
-must have a @code{GAL_TYPE_INT32} type and be the same size as
-@code{values}. All local minima (maxima), when @code{min0_max1} is @code{1}
-(@code{0}), are considered rivers (watersheds) and given a label of
-@code{GAL_LABEL_RIVER} (see above).
+@code{gal_label_indexs}, above. The final labels will be written in the
+respective positions of @code{labels}, which must have a
+@code{GAL_TYPE_INT32} type and be the same size as @code{values}.
+
+When @code{indexs} is already sorted, this function will ignore
+@code{min0_max1}. To judge if the dataset is sorted or not (by the values
+the indexs correspond to in @code{values}, not the actual indexs), this
+function will look into the bits of @code{indexs->flag}, for the respective
+bit flags, see @ref{Generic data container}. If @code{indexs} is not
+already sorted, this function will sort it according to the values of the
+respective pixel in @code{values}. The increasing/decreasing order will be
+determined by @code{min0_max1}. Note that if this function is called on
+multiple threads @emph{and} @code{values} points to a different array on
+each thread, this function will not return a reasonable result. In this
+case, please sort @code{indexs} prior to calling this function (see
+@code{gal_qsort_index_multi_d} in @ref{Qsort functions}).
+
+When @code{indexs} is decreasing (increasing), or @code{min0_max1} is
+@code{1} (@code{0}), local minima (maxima), are considered rivers
+(watersheds) and given a label of @code{GAL_LABEL_RIVER} (see above).
 
 Note that rivers/watersheds will also be formed on the edges of the labeled
 regions or when the labeled pixels touch a blank pixel. Therefore this
@@ -25588,7 +25645,7 @@ efficient, it is thus recommended to use @code{gal_blank_present} (with
 @code{updateflag=1}) prior to calling this function (see @ref{Library blank
 values}. Once the flag has been set, no other function (including this one)
 that needs special behavior for blank pixels will have to parse the dataset
-any more.
+to see if it has blank values any more.
 
 If you are sure your dataset doesn't have blank values (by the design of
 your software), to avoid an extra parsing of the dataset and improve
