--- a/THANKS
+++ b/THANKS
@@ -34,6 +34,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Brandon Invergo                      brandon@gnu.org
     Aurélien Jarno                       aurelien.jarno@univ-lyon1.fr
     Lee Kelvin                           l.s.kelvin@ljmu.ac.uk
+    Brandon Kelly                        b.k.kelly@2017.ljmu.ac.uk
     Mohammad-Reza Khellat                moha.khe@gmail.com
     Floriane Leclercq                    floriane.leclercq@univ-lyon1.fr
     Alan Lefor                           alefor@astr.tohoku.ac.jp
